@@ -53,10 +53,10 @@ public class excel {
             };
             excel = Dispatch.invoke(excels, "Open", Dispatch.Method, obj, new int[9]).toDispatch();
             Dispatch sheets = Dispatch.call(excel, "Worksheets").toDispatch();
-            Dispatch sheet = Dispatch.call(sheets, "Item", new Integer(1)).toDispatch();
+            Dispatch sheet = Dispatch.call(sheets, "Item", Integer.valueOf(1)).toDispatch();
             Dispatch pageSetup = Dispatch.call(sheet, "PageSetup").toDispatch();
             Dispatch.put(pageSetup, "Orientation", new Variant(2));
-            Dispatch.put(pageSetup, "PaperSize", new Integer(9));//A3是8，A4是9，A5是11等等
+            Dispatch.put(pageSetup, "PaperSize", Integer.valueOf(9));//A3是8，A4是9，A5是11等等
             File tofile = new File(outFilePath);
             // System.err.println(getDocPageSize(new File(sfileName)));
             if (tofile.exists()) {
